# synthetic-data-generators

./: LICENSE  README.md
daily_data_change_etl/: README.md  pyproject.toml
daily_data_change_etl/generator/: etl.py  example_notebook.ipynb  generator.py
