[tool.poetry]
name = "daily-data-change-etl"
version = "0.1.0"
description = ""
authors = ["codineric <risheric@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.2"
click = "^8.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
jupyter = "^1.1.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
